--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                             <!-- <div class="inner-title">Hotline</div>
                             <div class="inner-desc">0965693740</div> -->
                             <a href="/content/lienhe.html" class="inner-button">
-                                <div class="inner-title" style=" font-weight: bold;">Hotline</div>
-                                <div class="inner-desc"  style="color: yellow; font-weight: bold;">096.569.3740</div>
+                                <div class="inner-title">Hotline</div>
+                                <div class="inner-desc" >096.569.3740</div>
                             </a>
                         </div>
                     </div>
